tests/auto/qxmlstream/XML-Test-Suite/xmlconf/ibm/invalid/P68/ibm68i01.dtd
<!ENTITY ge1 "abcdef">
<!ELEMENT a EMPTY>
<!ATTLIST a attr1 CDATA "&ge2;">
<!--* GE reference therebefore doesn't match declaration *-->
